[package]
name = "glacis"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LIDAR-style TUI for Glacis chain of custody system"

[[bin]]
name = "glacis"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
