[package]
name = "glacis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Glacis chain of custody"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"

# Logging and tracing
tracing = "0.1"

# Synchronization primitives
parking_lot = "0.12"

# Random number generation
rand = "0.8"

# CSV parsing
csv = "1.3"

# Property-based testing (optional, for testing module)
proptest = { version = "1", optional = true }

# Pin projection for async
pin-project = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
proptest = "1"

[features]
default = []
testing = ["proptest"]
full = ["testing"]
