[package]
name = "glacis-launch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hollywood-style TUI launcher for Glacis"

[[bin]]
name = "glacis-launch"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
